fix styles on small desktops

--- a/src/blocks/product-cover/product-cover.styl
+++ b/src/blocks/product-cover/product-cover.styl
@@ -120,7 +120,7 @@
 		@media tablet
 			right 10%
 			bottom 5%
-			width 40%
+			width 30%
 		@media phone
 			bottom 1px
 			right auto
